fix font size on small device

--- a/sass/main.css
+++ b/sass/main.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .navbar .nav-item {
@@ -105,6 +105,16 @@ body {
   color: #ffffff;
 }
 
+@media screen and (max-width: 768px) {
+  .display-3 {
+    font-size: 25px !important;
+    font-weight: 600 !important;
+  }
+
+  .lead {
+    font-size: 16px !important;
+  }
+}
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
