--- a/sass/styles/styles.sass
+++ b/sass/styles/styles.sass
@@ -4,7 +4,7 @@
     box-sizing: border-box
 
 body 
-    overflow-x: hidden
+    overflow-x: hidden !important
     // background: red 
     // font-family: 'Poppins', sans-serif
 
@@ -91,3 +91,13 @@ body
 #main-footer
     background: #222222
     color: #ffffff
+
+
+@media screen and ( max-width: 768px )
+    .display-3 
+        font-size: 25px !important
+        font-weight: 600 !important
+
+    .lead 
+        font-size: 16px !important
+    
